<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_accueil">

    <fragment
        android:id="@+id/nav_accueil"
        android:name="com.example.gsbparam.Controleur.Accueil"
        android:label="@string/enteteAccueil"
        tools:layout="@layout/fragment_accueil">

        <!--action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" /-->
        <action
            android:id="@+id/gotoAffPra"
            app:destination="@id/nav_pra" />
        <action
            android:id="@+id/gotoAffMed"
            app:destination="@id/nav_med" />
        <action
            android:id="@+id/gotoOffrir"
            app:destination="@id/nav_off" />
        <action
            android:id="@+id/gotoAccueil"
            app:destination="@id/nav_accueil" />
    </fragment>
    <!--fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.gsbparam.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment-->

    <fragment
        android:id="@+id/nav_pra"
        android:name="com.example.gsbparam.Controleur.ListePraticiens"
        android:label="@string/enteteListePra"
        tools:layout="@layout/fragment_liste_praticiens" >
        <action
            android:id="@+id/gotoAffPra"
            app:destination="@id/nav_pra" />
        <action
            android:id="@+id/gotoAffMed"
            app:destination="@id/nav_med" />
        <action
            android:id="@+id/gotoOffrir"
            app:destination="@id/nav_off" />
        <action
            android:id="@+id/gotoAccueil"
            app:destination="@id/nav_accueil" />
    </fragment>

    <fragment
        android:id="@+id/nav_med"
        android:name="com.example.gsbparam.Controleur.ListeMedicaments"
        android:label="@string/enteteListeMed"
        tools:layout="@layout/fragment_liste_medicaments" >
        <action
            android:id="@+id/gotoAffPra"
            app:destination="@id/nav_pra" />
        <action
            android:id="@+id/gotoAffMed"
            app:destination="@id/nav_med" />
        <action
            android:id="@+id/gotoOffrir"
            app:destination="@id/nav_off" />
        <action
            android:id="@+id/gotoAccueil"
            app:destination="@id/nav_accueil" />
    </fragment>

    <fragment
        android:id="@+id/nav_off"
        android:name="com.example.gsbparam.Controleur.OffrirMed"
        android:label="@string/enteteOffrir"
        tools:layout="@layout/fragment_offrir" >
        <action
            android:id="@+id/gotoAffPra"
            app:destination="@id/nav_pra" />
        <action
            android:id="@+id/gotoAffMed"
            app:destination="@id/nav_med" />
        <action
            android:id="@+id/gotoOffrir"
            app:destination="@id/nav_off" />
        <action
            android:id="@+id/gotoAccueil"
            app:destination="@id/nav_accueil" />
    </fragment>
</navigation>